# osmosis_vs_sdf

./: README.md
osmosis_demo/: .gitignore  dbt_project.yml  pyproject.toml
osmosis_demo/models/example/: child1.sql  child1.yml  child2.sql  child2.yml  child3.sql  child3.yml  parent.sql  parent.yml
sdf_demo/: workspace.sdf.yml
sdf_demo/metadata/: parent.sdf.yml
sdf_demo/models/: child1.sql  child2.sql  child3.sql  parent.sql
