[project]
name = "osmosis_demo"
version = "0.1.0"
description = ""
authors = [
    {name = "myshmeh",email = "myshmeh@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "dbt-core (>=1.9.1,<2.0.0)",
    "dbt-duckdb (>=1.9.1,<2.0.0)",
    "dbt-osmosis (>=1.1.9,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
